feat: Change title; add medieval map

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <b id="found-something"></b>
           </div>
         </div>
-        <h1>Search for hidden objects!</h1>
+        <h1>Search for treasure!</h1>
       </div>
       <div id="objects-container"></div>
       <div id="hint-container">
